--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -20,3 +20,13 @@
     background-color: #31b572;
 
 }
+.lmj-sales
+{
+    color: red;
+    font-size: small;
+    font-weight: bold;
+}
+.lmj-shoppingList
+{
+    color:#31b572;
+}
