utilistation de useState et useEffect

--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -18,6 +18,8 @@
     padding: 32px;
     color:white;
     background-color: #31b572;
+    justify-content: space-around;
+    padding: 50px;
 
 }
 .lmj-sales
